--- a/eagle-metric/eagle-hdfs-web/src/main/webapp/app/apps/hdfs/partials/overview.html
+++ b/eagle-metric/eagle-hdfs-web/src/main/webapp/app/apps/hdfs/partials/overview.html
@@ -28,15 +28,15 @@
             <tr>
                 <td width="5%">
                     <a ui-sref="namenodeList({siteId: site})" target="_blank">
-                        <span ng-show="namenodeactivenum">{{namenodeactivenum}}</span></a>
-                    <span ng-show="!namenodeactivenum">N/A</span>
+                        <span ng-show="namenodeactivenum!==-1">{{namenodeactivenum || 0}}</span></a>
+                    <span ng-show="namenodeactivenum===-1">N/A</span>
                 </td>
                 <th width="30%">Active Namenode</th>
                 <td>
-                    <span ng-show="capacityNum">{{common.number.format(capacityNum, 0)}} TB</span>
-                    <span ng-show="!capacityNum">N/A</span>
-                    Capacity <span ng-show="usedCapacityNum">{{common.number.format(usedCapacityNum, 0)}} TB</span>
-                    <span ng-show="!usedCapacityNum">N/A</span> usedCapacity
+                    <span ng-show="capacityNum!==-1">{{common.number.format(capacityNum, 0)}} TB</span>
+                    <span ng-show="capacityNum===-1">N/A</span>
+                    <strong>Capacity</strong> <span ng-show="usedCapacityNum!==-1">{{common.number.format(usedCapacityNum, 0)}} TB</span>
+                    <span ng-show="usedCapacityNum===-1">N/A</span> <strong>usedCapacity</strong>
 
                 </td>
                 <th width="30%">
@@ -45,25 +45,25 @@
             <tr>
                 <td>
                     <a ui-sref="namenodeList({siteId: site})" target="_blank">
-                        <span ng-show="namenodestandbynum">{{namenodestandbynum}}</span></a>
-                    <span ng-show="!namenodestandbynum">N/A</span>
+                        <span ng-show="namenodestandbynum!==-1">{{namenodestandbynum || 0}}</span></a>
+                    <span ng-show="namenodestandbynum===-1">N/A</span>
                 </td>
                 <th>Backup Namenode</th>
             </tr>
             <tr>
                 <td>
                     <a ui-sref="datanodeList({siteId: site})">
-                        <span ng-show="datanodehealtynum || datanodeunhealtynum">{{datanodehealtynum+datanodeunhealtynum}}</span></a>
-                    <span ng-show="!datanodehealtynum && !datanodeunhealtynum">N/A</span>
+                        <span ng-show="datanodehealtynum!==-1 && datanodeunhealtynum!==-1">{{datanodehealtynum+datanodeunhealtynum}}</span></a>
+                    <span ng-show="datanodehealtynum===-1 || datanodeunhealtynum===-1">N/A</span>
                 </td>
                 <th>Datanodes:
-                    <span ng-show="datanodehealtynum">{{datanodehealtynum}}</span>
-                    <span ng-show="!datanodehealtynum">N/A</span>
-                    <span
-                            class="label label-success">Good Health</span> /
-                    <a ui-sref="datanodeList({siteId: site})">
-                        <span ng-show="datanodeunhealtynum">{{datanodeunhealtynum}}</span></a>
+                    <span ng-show="datanodehealtynum!==-1 && datanodeunhealtynum!==-1 && datanodehealtynum"><a ui-sref="datanodeList({siteId: site})">{{datanodehealtynum || 0}}</a></span>
+                    <span ng-show="!datanodehealtynum">0</span>
+                    <span ng-show="datanodehealtynum===-1 || datanodeunhealtynum===-1">N/A</span>
+                    <span class="label label-success">Good Health</span> /
+                    <span ng-show="datanodehealtynum!==-1 && datanodeunhealtynum!==-1 && datanodeunhealtynum"><a ui-sref="datanodeList({siteId: site})">{{datanodeunhealtynum || 0}}</a></span>
                     <span ng-show="!datanodeunhealtynum">0</span>
+                    <span ng-show="datanodehealtynum===-1 || datanodeunhealtynum===-1">N/A</span>
                     <span class="label label-danger">Bad Health</span>
                 </th>
                 <td></td>
@@ -95,17 +95,26 @@
                         <div class="col-sm-6 col-md-4 col-lg-6" ng-repeat="chart in chartList track by $index">
                             <div class="hadoopMetric-chart">
                                 <h3>{{metricList[chart.name].title}}</h3>
-                                <div ng-show="metricList[chart.name].loading"
-                                     class="fa fa-refresh fa-spin no-animate"></div>
-                                <div ng-show="metricList[chart.name].series.length" chart
-                                     class="hadoopMetric-chart-container"
+                                <div ng-show="activeNamenodeList && metricList[chart.name].loading" chart class="hadoopMetric-chart-container"></div>
+                                <div ng-show="activeNamenodeList && metricList[chart.name].loading" class="overlay-wrapper">
+                                    <div class="overlay">
+                                        <i class="fa fa-refresh fa-spin"></i>
+                                    </div>
+                                </div>
+                                <div ng-show="activeNamenodeList && metricList[chart.name].series.length" chart class="hadoopMetric-chart-container"
                                      series="metricList[chart.name].series"
                                      option="metricList[chart.name].option"></div>
-                                <div ng-show="!metricList[chart.name].series.length && !metricList[chart.name].loading"
-                                     class="hadoopMetric-chart-container">
+                                <div ng-show="activeNamenodeList && !metricList[chart.name].series.length && !metricList[chart.name].loading" class="hadoopMetric-chart-container">
                                     <div class="hadoopMetric-chart-container-withborder">
                                         <div class="hadoopMetric-no-chart-data">
                                             <span class="fa fa-question-circle"></span><span> NO DATA</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div ng-show="!activeNamenodeList" class="hadoopMetric-chart-container">
+                                    <div class="hadoopMetric-chart-container-withborder">
+                                        <div class="hadoopMetric-no-chart-data">
+                                            <span class="fa fa-question-circle"></span><span> N/A</span>
                                         </div>
                                     </div>
                                 </div>
